--- a/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.html
+++ b/src/app/_hauptKomponente/e-auftrag/e-auftrag.component.html
@@ -17,7 +17,7 @@
                         <br /> Friedaustrasse 3
                     </p>
                     <div class="btnBearbeiten">
-                        <p (click)="openKundendaten()">Kundendaten bearbeiten</p>
+                        <p (click)="openProjektKundendaten()">Kundendaten bearbeiten</p>
                     </div>
                 </div>
                 <div>
