--- a/src/app/_hauptKomponente/f-angebot/f-angebot.component.sass
+++ b/src/app/_hauptKomponente/f-angebot/f-angebot.component.sass
@@ -37,4 +37,7 @@
     max-height: calc( $zweiTeiligeHoeheUnten - 100px )
     overflow: scroll
 
+.positionTable th, 
+.positionTable td
+    width: 100%
 
