--- a/src/app/_popupKomponente/belege/belege.component.html
+++ b/src/app/_popupKomponente/belege/belege.component.html
@@ -9,15 +9,212 @@
     </div>
     <div class="popupContent">
         <div class="split firstSplit">
+            <p>Belegart auswählen:</p>
+            <form action="" class="radioForm radioFormBelege">
+                <div>
+                    <label for="radioBelegeAngebot">Angebot</label>
+                    <input type="radio" id="radioBelegeAngebot" checked name="belegArt" value="angebot" required>
+                    <span class="radio"></span>
+                </div>
+                <div>
+                    <label for="radioBelegeAuftrag">Auftrag</label>
+                    <input type="radio" id="radioBelegeAuftrag" name="belegArt" value="auftrag" required>
+                    <span class="radio"></span>
+                </div>
+                <div>
+                    <label for="radioBelegeRechnung">Rechnung</label>
+                    <input type="radio" id="radioBelegeRechnung" name="belegArt" value="rechnung" required>
+                    <span class="radio"></span>
+                </div>
+                <div>
+                    <label for="radioBelegeLeer">Leere Vorlage</label>
+                    <input type="radio" id="radioBelegeLeer" name="belegArt" value="leer" required>
+                    <span class="radio"></span>
+                </div>
+
+            </form>
+
+            <div class="btnBearbeiten">
+                <p>Beleg versenden</p>
+            </div>
         </div>
-        <div class="split secondSplit">
-        </div>
-        <div class="split thirdSplit">
+        <div class="split oneThird">
+            <div class="windowTable popupTable popupTableOneThird">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Datum</th>
+                            <th>Dokument</th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+                        <tr>
+                            <td>14.02.2022</td>
+                            <td>Rechnung</td>
+                            <td><a href="">Erneut versenden</a></td>
+                            <td><a href="">Download</a></td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
     <div class="popupFooter">
         <div class="btnBearbeiten btnSpeichern">
-            <p>Beleg versenden</p>
+            <p>Schliessen</p>
         </div>
     </div>
 </div>
