--- a/src/app/_popupKomponente/konditionen/konditionen.component.html
+++ b/src/app/_popupKomponente/konditionen/konditionen.component.html
@@ -9,6 +9,26 @@
     </div>
     <div class="popupContent">
         <div class="split firstSplit">
+            <p>Zahlungsart:</p>
+            <div class="dropDown">
+                <select name="zahlungsarten" id="zahlungsarten">
+                    <option value="za_01">Rechnung</option>
+                    <option value="za_02">Vorauskasse</option>
+                    <option value="za_03">Barzahlung</option>
+                </select>
+            </div>
+            <p>Zahlungskonditionen:</p>
+            <div class="dropDown">
+                <select name="zahlungsbedingungen" id="zahlungsbedingungen">
+                    <option value="zb_01">10 Tage 3% Skonto, 30 Tage Netto</option>
+                    <option value="zb_02">7 Tage 2% Skonto, 20 Tage Netto</option>
+                    <option value="zb_03">30 Tage Netto</option>
+                    <option value="zb_04">14 Tage Netto</option>
+                    <option value="zb_05">Vorauskasse</option>
+                    <option value="zb_06">Barzahlung</option>
+                    <option value="zb_07">Teilzahlung</option>
+                </select>
+            </div>
         </div>
         <div class="split secondSplit">
         </div>
