--- a/src/app/_popupKomponente/rechnungsadresse/rechnungsadresse.component.html
+++ b/src/app/_popupKomponente/rechnungsadresse/rechnungsadresse.component.html
@@ -9,10 +9,170 @@
     </div>
     <div class="popupContent">
         <div class="split firstSplit">
+            <p>Aktuelle Adresse:</p>
+            <p class="contentReadonly">
+                Friedaustrasse 3<br />9608 Ganterschwil<br />CH - Schweiz
+            </p>
+            <p>Ausgewählte Adresse:</p>
+            <p class="contentReadonly">
+                Friedaustrasse 3<br />9608 Ganterschwil<br />CH - Schweiz
+            </p>
+            <p>Neue Adresse:</p>
+            <textarea name="neueAdresse" id="neueAdresse" cols="30" rows="3"></textarea>
+            <div class="btnBearbeiten">
+                <p>Neue Adresse speichern</p>
+            </div>
         </div>
-        <div class="split secondSplit">
-        </div>
-        <div class="split thirdSplit">
+        <div class="split oneThird">
+            <p>Adressliste:</p>
+            <div class="windowTable popupTable popupTableOneThird">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Strasse</th>
+                            <th>Ortschaft</th>
+                            <th>Land</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="">Friedaustrasse 3</a></td>
+                            <td><a href="">9608 Ganterschwil</a></td>
+                            <td><a href="">CH - Schweiz</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
     <div class="popupFooter">
