--- a/src/styles.sass
+++ b/src/styles.sass
@@ -42,7 +42,7 @@ h1
     font-size: 35px
     color: black
 
-h2, h3, h4, h5, p, a, label
+h2, h3, h4, h5, p, a, label, textarea
     font-family: $fontRoboto
     font-weight: regular
     font-size: 15px
@@ -73,3 +73,4 @@ a
 /* Aktive Menupunkte */
 .active 
     background-color: $primaryColor !important
+
