--- a/src/app/_popupKomponente/generate-artikel/generate-artikel.component.html
+++ b/src/app/_popupKomponente/generate-artikel/generate-artikel.component.html
@@ -9,10 +9,57 @@
     </div>
     <div class="popupContent">
         <div class="split firstSplit">
+            <p>Artikelnummer:</p>
+            <input class="contentReadonly" readonly type="text" value="KU 40-001">
+            <p>Bezeichnung:</p>
+            <input type="text" value="Thomas Brändle">
+            <p>Artikelgruppe:</p>
+            <div class="dropDown">
+                <select name="artikelgruppe" id="artikelgruppe">
+                    <option value="ag01">Webentwicklung</option>
+                    <option value="ag02">Fotografie</option>
+                    <option value="ag03">Videografie</option>
+                    <option value="ag03">Anderes</option>
+                </select>
+            </div>
         </div>
         <div class="split secondSplit">
+            <p>Einheit:</p>
+            <div class="dropDown">
+                <select name="einheit" id="einheit">
+                    <option value="ei01">Webentwicklung</option>
+                    <option value="ei02">Fotografie</option>
+                    <option value="ei03">Videografie</option>
+                    <option value="ei03">Anderes</option>
+                </select>
+            </div>
+            <p>Einzelpreis in CHF:</p>
+            <input type="number" value="150.00">
+            <div class="artikelKonditionen">
+                <p>Belegart auswählen:</p>
+                <form action="" class="radioForm">
+                    <div>
+                        <label for="radioNetto">Nettoartikel</label>
+                        <input type="radio" id="radioNetto" name="artikelKonditionen" value="Nettoartikel" checked required>
+                        <span class="radio"></span>
+                    </div>
+                    <div>
+                        <label for="radioBrutto">Rabattfähiger</label>
+                        <input type="radio" id="radioBrutto" name="artikelKonditionen" value="Rabattfähiger Artikel" required>
+                        <span class="radio"></span>
+                    </div>
+                </form>
+            </div>
+
         </div>
         <div class="split thirdSplit">
+            <div class="notizen notizenHoch">
+                <textarea readonly="readonly">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimatasanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justoduo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                </textarea>
+            </div>
+            <div class="btnBearbeiten btnNotizen">
+                <p (click)="openNotizen()">Notizen bearbeiten</p>
+            </div>
         </div>
     </div>
     <div class="popupFooter">
