--- a/src/app/_popupKomponente/generate-kunde/generate-kunde.component.html
+++ b/src/app/_popupKomponente/generate-kunde/generate-kunde.component.html
@@ -9,10 +9,39 @@
     </div>
     <div class="popupContent">
         <div class="split firstSplit">
+            <p>Kundennummer:</p>
+            <input class="contentReadonly" readonly type="text" value="KU 40-001">
+            <p>Name:</p>
+            <input type="text" value="Thomas Brändle">
+            <p>Adresse:</p>
+            <textarea class="inputAdresse" type="text">Friedaustrasse 3, 9608 Ganterschwil, CH - Schweiz
+            </textarea>
         </div>
         <div class="split secondSplit">
+            <p>Website:</p>
+            <input type="text" value="www.thomas-braendle.com">
+            <p>E-Mail:</p>
+            <input type="text" value="design@thomas-braendle.com">
+            <p>Telefon:</p>
+            <input type="text" value="+41 79 520 65 11">
+            <p>Kundengruppe:</p>
+            <div class="dropDown">
+                <select name="kundenart" id="kundenart">
+                    <option value="ka01">Privatperson</option>
+                    <option value="ka02">Geschäftspartner</option>
+                    <option value="ka03">Verein</option>
+                    <option value="ka03">Anderes</option>
+                </select>
+            </div>
         </div>
         <div class="split thirdSplit">
+            <div class="notizen notizenHoch">
+                <textarea readonly="readonly">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimatasanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justoduo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                </textarea>
+            </div>
+            <div class="btnBearbeiten btnNotizen">
+                <p (click)="openNotizen()">Notizen bearbeiten</p>
+            </div>
         </div>
     </div>
     <div class="popupFooter">
