--- a/src/app/_popupKomponente/loeschen/loeschen.component.sass
+++ b/src/app/_popupKomponente/loeschen/loeschen.component.sass
@@ -1,2 +1,90 @@
 @import './src/sass/var'
 @import './src/sass/popup'
+
+.popupContent
+    margin-left: 40px
+
+/* ### Login Form ### */
+.adminLogin
+    margin-top: 90px
+
+.adminLogin p
+    text-align: center
+    margin-bottom: 15px
+
+.loginForm
+    display: flex
+    justify-content: center
+    align-content: center
+
+.loginUserName input::placeholder, 
+.loginPasswort input::placeholder
+    color: $formFontColor
+
+.loginUserName input, 
+.loginPasswort input
+    width: 250px
+    background-color: white
+    height: 18px
+    margin-top: 5px
+    color: black
+
+.loginUserName, 
+.loginPasswort
+    height: 35px
+    border: 1px solid $borderColor
+    border-radius: 10px
+    background-color: white
+    margin-top: 10px
+    margin-bottom: 10px
+
+.loginUserName input, 
+.loginPasswort input
+    margin-left: 10px
+    margin-right: 10px
+    border: none
+    outline: none
+
+
+.loginUserName input, 
+.loginPasswort input
+    &:focus
+        border: none
+        outline: none
+
+.loginUserName img, 
+.loginPasswort img
+    background-color: white
+
+.loginForm img
+    height: 20px
+    display: inline
+    vertical-align: top
+    margin-top: 2.5px
+    margin-left: 2px
+
+.trennLinie
+    border-right: 1px solid $borderColor
+    padding: 5px
+
+/* ### Login Button ### */
+.submitLogin
+    display: flex
+    justify-content: center
+    align-items: center
+    width: 100%
+
+.submitLogin input
+    width: 320px
+    height: 35px
+    background-color: white
+    border: 1px solid $borderColor
+    border-radius: 8px
+    cursor: pointer
+    margin-top: 8px
+
+.submitLogin input
+    background-color: white
+    font-family: $fontRoboto
+    font-size: 15px
+
