--- a/src/sass/_element.sass
+++ b/src/sass/_element.sass
@@ -76,7 +76,7 @@
     height: 30px
     border: 1px solid $borderColor
     background-color: white
-    border-radius: 5px
+    border-radius: 8px
     text-decoration: none
 
 /* Window Tabelle */
@@ -135,10 +135,8 @@
         max-height: calc( $gesamteHoehe - 90px )
 
 .windowTable td, 
-.windowTable th, 
-.positionTable td,
-.positionTable th
-        width: 100%
+.windowTable th
+    width: 100%
 
 
 .windowTable thead th,
@@ -219,7 +217,7 @@
 .btnPositionen p
     background-color: white
     border: 1px solid $borderColor
-    border-radius: 5px
+    border-radius: 8px
     text-align: center
     padding: 2px
     margin-bottom: 5px
@@ -242,7 +240,7 @@
     width: 100%
     background-color: white
     border: 1px solid $borderColor
-    border-radius: 5px
+    border-radius: 8px
     text-align: center
     padding: 2px
     margin-bottom: 5px
@@ -268,7 +266,7 @@ select
     width: 102%
     height: 34px
     border: 1px solid $borderColor
-    border-radius: 5px
+    border-radius: 8px
     cursor: pointer
     outline: none
     margin-bottom: 10px
@@ -286,7 +284,7 @@ select
     right: 15px
     bottom: 10px
     border: 1px solid $borderColor
-    border-radius: 5px
+    border-radius: 8px
     padding-top: 5px
     padding-bottom: 5px
     cursor: pointer
