--- a/src/sass/_popup.sass
+++ b/src/sass/_popup.sass
@@ -24,29 +24,45 @@
     height: 50px
     cursor: pointer
 
+.searchBarSmallPopup input
+    width: 100%
+    border: none
+    padding: 0px
+    margin: 0px
+    &:focus
+        outline: none
+
 /* Spalten */
 .split
     display: inline-block
-    width: calc( calc(894px - 130px) /3 )
+    width: calc( calc(894px - 115px) /3 )
     margin-top: 15px
     vertical-align: top
+
+.oneThird
+    width: calc(calc(calc( calc(894px - 115px) /3 ) *2) + 17px)
+    margin-left: 10px
 
 .split p
     display: inline-block
     padding: 2px
     vertical-align: top
     width: 100%
+    margin-bottom: 10px
 
 .notizen input
     height: 500px
 
 .firstSplit
-    margin-right: 20px
+    margin-right: 10px
     margin-left: 40px
 
-.secondSplit,
-.thirdSplit
+.secondSplit
     margin-right: 10px
+    margin-left: 10px
+
+.thirdSplit
+    margin-right: 0px
     margin-left: 10px
 
 .dropDown select
@@ -62,13 +78,108 @@
 .btnBearbeiten
     cursor: pointer
 
+.btnNotizen
+    width: 98%
+
 .popupContent
-    min-height: calc(510px - 130px)
-    margin-bottom: 40px
+    min-height: calc(510px - 110px)
+    margin-bottom: 20px
+
+.notizenBearbeiten
+    height: calc(510px - 110px)
+    margin-left: 40px
+    margin-right: 10px
+
+.notizenBearbeiten textarea
+    border: 1px solid $borderColor
+    border-radius: 8px
+    background-color: white
+    height: 100%
+    width: 100%
+
+textarea
+    border: 1px solid $borderColor
+    border-radius: 8px
+    resize: none
+    padding: 5px
+    padding-right: 0px
+    width: 100%
+    &:focus
+        outline: none
+
+input
+    width: 100%
+    border: 1px solid $borderColor
+    border-radius: 8px
+    padding: 5px
+    margin-bottom: 5px
+    padding-right: 0px
+    &:focus
+        outline: none
+
+.dropDownAdresse select, 
+.inputAdresse
+    height: 55px
+    overflow-wrap: break-word
+
+.notizenHoch textarea
+    height: calc( 510px - 200px )
+    margin-bottom: 10px
+    width: 96%
+
+.radioForm
+    width: 100%
+    margin-bottom: 10px
+
+.radioForm input
+    opacity: 0
+    margin-right: 20px
+    width: auto
+
+.radioForm label
+    margin-right: 10px
+    display: inline-block
+    width: 205px
+
+.radio
+    position: absolute
+    height: 10px
+    width: 10px
+    background-color: white
+    border: 1px solid $borderColor
+    border-radius: 50%
+    margin-top: 5px
+
+.radioForm input[type=radio]
+    &:checked ~ .radio
+        background-color: $primaryColor
+
+.radioForm input
+    &:checked ~ .radio
+        &::after
+            display: block
+
+.radio
+    &::after
+        content: ""
+        display: none
+
 
 /* Popup Window Table */
 .popupTable tbody
     max-height: 370px
+
+.popupTableThird, 
+.popupTableOneThird
+    padding-left: 0px
+    margin-right: 0px
+    padding-top: 0px
+
+.popupTableThird tbody
+    max-height: 350px
+
+.popupTableOneThird tbody
+    max-height: 325px
 
 /* Popup Window Searchbar */
 .searchBarSmallPopup
@@ -79,7 +190,7 @@
     height: 25px
     background-color: white
     border: 1px solid $borderColor
-    border-radius: 5px
+    border-radius: 8px
 
 .searchBarSmallPopup input
     background-color: white
